--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       padding-bottom: .5rem;
     }
     .indicator {
-      /* min-height: 50px; */
+      min-height: 50px;
       height: 100%;
       flex-grow: 1;
       transition: width linear 1s;
