--- a/index.html
+++ b/index.html
@@ -1,171 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>nviz | Aquarium Nitrogen Cycle Visualizer</title>
-  <style>
-    html {
-      color: #333;
-      height: 100%;
-    }
-    body {
-      min-height: 100%;
-      padding: 3rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-    }
-    h1 {
-      margin-bottom: 5rem;
-    }
-    .indicators {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: flex-start;
-      flex-grow: 1;
-    }
-    .indicators > * {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      padding-bottom: 3rem;
-    }
-    .indicator-label {
-      font-size: 24px;
-      font-weight: 600;
-      padding-bottom: .5rem;
-    }
-    .indicator-label .description {
-      font-size: 1rem;
-      color: #666;
-    }
-    .indicator {
-      min-height: 50px;
-      height: 100%;
-      flex-grow: 1;
-      transition: width linear 1s;
-    }
-    .indicator.bioload { background-color: rgb(20, 8, 133); }
-    .indicator.ammonia { background-color: rgb(106, 235, 32); }
-    .indicator.nitrite { background-color: rgb(24, 204, 228); }
-    .indicator.nitrate { background-color: rgb(241, 158, 2); }
-    .indicator.nitrosomonas { background-color: rgb(146, 64, 167); }
-    .indicator.nitrobacter { background-color: rgb(151, 25, 99); }
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>nviz | Aquarium Nitrogen Cycle Visualizer</title>
+    <style>
+      html {
+        color: #333;
+        height: 100%;
+      }
+      body {
+        min-height: 100%;
+        padding: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+      h1 {
+        margin-bottom: 5rem;
+      }
+      .indicators {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        flex-grow: 1;
+      }
+      .indicators > * {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 3rem;
+      }
+      .indicator-label {
+        font-size: 24px;
+        font-weight: 600;
+        padding-bottom: 0.5rem;
+      }
+      .indicator-label .description {
+        font-size: 1rem;
+        color: #666;
+      }
+      .indicator {
+        min-height: 50px;
+        height: 100%;
+        flex-grow: 1;
+        transition: width linear 1s;
+      }
+      .indicator.bioload {
+        background-color: rgb(20, 8, 133);
+      }
+      .indicator.ammonia {
+        background-color: rgb(106, 235, 32);
+      }
+      .indicator.nitrite {
+        background-color: rgb(24, 204, 228);
+      }
+      .indicator.nitrate {
+        background-color: rgb(241, 158, 2);
+      }
+      .indicator.nitrosomonas {
+        background-color: rgb(146, 64, 167);
+      }
+      .indicator.nitrobacter {
+        background-color: rgb(151, 25, 99);
+      }
 
-    button {
-      background-color: white;
-      border: 5px solid black;
-      color: black;
-      font-size: 36px;
-      font-weight: 600;
-      cursor: pointer;
-      margin: 1rem;
-      padding: 1rem 2rem;
-      text-transform: lowercase;
-    }
-    button:hover {
-      background-color: black;
-      color: white !important;
-    }
-    button.start {
-      border-color: rgb(106, 235, 32);
-      color: rgb(106, 235, 32);
-    }
-    button.start:hover {
-      background-color: rgb(106, 235, 32);
-    }
-    button.stop {
-      border-color: rgb(175, 4, 4);
-      color: rgb(175, 4, 4);
-    }
-    button.stop:hover {
-      background-color: rgb(175, 4, 4);
-    }
+      button {
+        background-color: white;
+        border: 5px solid black;
+        color: black;
+        font-size: 36px;
+        font-weight: 600;
+        cursor: pointer;
+        margin: 1rem;
+        padding: 1rem 2rem;
+        text-transform: lowercase;
+      }
+      button:hover {
+        background-color: black;
+        color: white !important;
+      }
+      button.start {
+        border-color: rgb(106, 235, 32);
+        color: rgb(106, 235, 32);
+      }
+      button.start:hover {
+        background-color: rgb(106, 235, 32);
+      }
+      button.stop {
+        border-color: rgb(175, 4, 4);
+        color: rgb(175, 4, 4);
+      }
+      button.stop:hover {
+        background-color: rgb(175, 4, 4);
+      }
 
-    label {
-      font-size: 24px;
-      display: inline-block;
-      margin-top: 4rem;
-      margin: 20px 10px;
-    }
-    input[type=range] {
-      margin-right: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <h1>nviz | aquarium nitrogen cycle visualizer</h1>
+      label {
+        font-size: 24px;
+        display: inline-block;
+        margin-top: 4rem;
+        margin: 20px 10px;
+      }
+      input[type='range'] {
+        margin-right: 2rem;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>nviz | aquarium nitrogen cycle visualizer</h1>
 
-  <div class="indicators">
-    <parameter-indicator params="
+    <div class="indicators">
+      <parameter-indicator
+        params="
       name: 'bioload',
       description: 'ammonia addition rate (ppm/time)',
       value: bioload,
       scale: 10
-    "></parameter-indicator>
-    <parameter-indicator params="
+    "
+      ></parameter-indicator>
+      <parameter-indicator
+        params="
       name: 'ammonia',
       description: 'concentration (ppm)',
       value: ammonia,
       scale: 20
-    "></parameter-indicator>
-    <parameter-indicator params="
+    "
+      ></parameter-indicator>
+      <parameter-indicator
+        params="
       name: 'nitrosomonas',
       description: 'size of bacterial colony processing NH<sub>3</sub>/NH<sub>4<super>+</super></sub> &rArr; NO<sub>2<super>-</super></sub> (population)',
       value: nitrosomonas,
       scale: 10
-    "></parameter-indicator>
-    <parameter-indicator params="
+    "
+      ></parameter-indicator>
+      <parameter-indicator
+        params="
       name: 'nitrite',
       description: 'concentration (ppm)',
       value: nitrite,
       scale: 32
-    "></parameter-indicator>
-    <parameter-indicator params="
+    "
+      ></parameter-indicator>
+      <parameter-indicator
+        params="
       name: 'nitrobacter',
       description: 'size of bacterial colony processing NO<sub>2<super>-</super></sub> &rArr; NO<sub>3<super>-</super></sub> (population)',
       value: nitrobacter,
       scale: 10
-    "></parameter-indicator>
-    <parameter-indicator params="
+    "
+      ></parameter-indicator>
+      <parameter-indicator
+        params="
       name: 'nitrate',
       description: 'concentration (ppm)',
       value: nitrate,
       scale: 1
-    "></parameter-indicator>
-  </div>
+    "
+      ></parameter-indicator>
+    </div>
 
-  <div class="controls">
-    <button data-bind="text: paused() ? 'Start' : 'Stop', css: paused() ? 'start' : 'stop', click: togglePlayState"></button>
-    <br>
-    <button data-bind="click: addAmmonia">Add Ammonia</button>
-    <button data-bind="click: addMedia">Add Cycled Media</button>
-    <button data-bind="click: () => increaseBioload(1)">Increase Bioload (+1)</button>
-    <button data-bind="click: () => increaseBioload(5)">Increase Bioload (+5)</button>
-    <button data-bind="click: () => increaseBioload(100)">Increase Bioload (Max)</button>
-    <button data-bind="click: () => performWaterChange(20)">20% Water Change</button>
-    <button data-bind="click: () => performWaterChange(50)">50% Water Change</button>
-    <button data-bind="click: () => performWaterChange(90)">90% Water Change</button>
-    <br>
-    <label for="wcfreq">water change frequency (0 = disable automatic water changes, 10 = most frequent)</label>
-    <input type="range" min="0" max="10" data-bind="value: waterChangeFrequency"/>
-    <input type="number" name="wcfreq" min="0" max="10" data-bind="value: waterChangeFrequency"/>
-    <br>
-    <label for="wcamt">water change amount (%)</label>
-    <input type="range" min="5" max="100" data-bind="value: waterChangePercent"/>
-    <input type="number" name="wcamt" min="5" max="100" data-bind="value: waterChangePercent"/>
-  </div>
+    <div class="controls">
+      <button
+        data-bind="text: paused() ? 'Start' : 'Stop', css: paused() ? 'start' : 'stop', click: togglePlayState"
+      ></button>
+      <br />
+      <button data-bind="click: addAmmonia">Add Ammonia</button>
+      <button data-bind="click: addMedia">Add Cycled Media</button>
+      <button data-bind="click: () => increaseBioload(1)">
+        Increase Bioload (+1)
+      </button>
+      <button data-bind="click: () => increaseBioload(5)">
+        Increase Bioload (+5)
+      </button>
+      <button data-bind="click: () => increaseBioload(100)">
+        Increase Bioload (Max)
+      </button>
+      <button data-bind="click: () => performWaterChange(20)">
+        20% Water Change
+      </button>
+      <button data-bind="click: () => performWaterChange(50)">
+        50% Water Change
+      </button>
+      <button data-bind="click: () => performWaterChange(90)">
+        90% Water Change
+      </button>
+      <br />
+      <label for="wcfreq"
+        >water change frequency (0 = disable automatic water changes, 10 = most
+        frequent)</label
+      >
+      <input
+        type="range"
+        min="0"
+        max="10"
+        data-bind="value: waterChangeFrequency"
+      />
+      <input
+        type="number"
+        name="wcfreq"
+        min="0"
+        max="10"
+        data-bind="value: waterChangeFrequency"
+      />
+      <br />
+      <label for="wcamt">water change amount (%)</label>
+      <input
+        type="range"
+        min="5"
+        max="100"
+        data-bind="value: waterChangePercent"
+      />
+      <input
+        type="number"
+        name="wcamt"
+        min="5"
+        max="100"
+        data-bind="value: waterChangePercent"
+      />
+    </div>
 
-  <hr>
+    <hr />
 
-  <div class="about">
-    This demo <em>roughly</em> models the process of cycling an aquarium. Scale and time are arbitrary, and this only serves as an educational tool for explaining the fundamental processes at play and how changes impact the system. It is not intended to be a cycling or water change calculator in any respect but rather to aid you in reading your own water tests and <em>why</em> we do what we do.
-  </div>
+    <div class="about">
+      This demo <em>roughly</em> models the process of cycling an aquarium.
+      Scale and time are arbitrary, and this only serves as an educational tool
+      for explaining the fundamental processes at play and how changes impact
+      the system. It is not intended to be a cycling or water change calculator
+      in any respect but rather to aid you in reading your own water tests and
+      understand <em>why</em> we do what we do.
+    </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js" integrity="sha512-vs7+jbztHoMto5Yd/yinM4/y2DOkPLt0fATcN+j+G4ANY2z4faIzZIOMkpBmWdcxt+596FemCh9M18NUJTZwvw==" crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.min.js"
+      integrity="sha512-vs7+jbztHoMto5Yd/yinM4/y2DOkPLt0fATcN+j+G4ANY2z4faIzZIOMkpBmWdcxt+596FemCh9M18NUJTZwvw=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./main.js"></script>
+  </body>
 </html>
